Fixed nav bar wrapping, added commented out class for request form.

--- a/mysite/static/style.css
+++ b/mysite/static/style.css
@@ -15,7 +15,8 @@
 	}
 
 	nav ul li {
-		display: inline;
+		display: inline-block;
+		margin: 5px;
 		padding: 10px;
 		font-size: 25px;
 	}
